<resources>
    <string name="app_name">BonVoyage</string>
    <string name="vtb_auth">Войти по ВТБ ID</string>
    <string name="gos_auth">Войти с помощью Госуслуг</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="have_account">Уже есть аккаунт? Войдите</string>
    <string name="sign_up_header">Привет!\nНачнём путешествие?</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter_code_header">Мы отправили код тебе на телефон</string>
    <string name="enter_code_hint">Введите код</string>
    <string name="next">Продолжить</string>
    <string name="fill_profile_header">Немного о тебе</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthdate">Дата рождения</string>
    <string name="sign_in_header">Давно не виделись!</string>
    <string name="title_menu_main">Главная</string>
    <string name="title_menu_account">Счёт</string>
    <string name="title_menu_habitation">Жильё</string>
    <string name="title_menu_messenger">Чаты</string>
    <string name="title_menu_profile">Профиль</string>
    <string name="title_become_a_guide">Станьте гидом</string>
    <string name="text_become_a_guide">Придумайте свой тематический маршрут и получите баллы.</string>
    <string name="person_info">Личная информация</string>
    <string name="notifications">Уведомления</string>
    <string name="history">Мои поездки</string>
    <string name="title_where_we_go">Куда едем?</string>
    <string name="text_city">Город</string>
    <string name="point_separator">•</string>
    <string name="title_book">Забронировать</string>
    <string name="title_create_habitation">Создать жилье</string>
    <string name="title_create_tour">Создать прогулку</string>
    <string name="title_save_and_exit">Сохранить и выйти</string>
    <string name="title_choose_habitation_type">Выберите тип жилья</string>
    <string name="title_next">Далее</string>
    <string name="title_add_habitation_description">Добавьте название и описание жилья</string>
    <string name="title_add_tour_description">Добавьте название и описание</string>
    <string name="text_name">Название</string>
    <string name="text_description">Описание</string>
    <string name="text_tour_duration">Длительность прогулки</string>
    <string name="title_back">Назад</string>
    <string name="title_choose_tour_type">Выберите тематику прогулки</string>
    <string name="title_add_your_habitation">Добавить свой жильё</string>
    <string name="title_choose_city">Выберите город</string>
    <string name="text_your_city">Ваш город</string>
    <string name="title_hout_to_get">Как добраться?</string>
    <string name="title_from_where">Откуда</string>
    <string name="title_where">Куда</string>
    <string name="title_choose_date">Выбрать даты</string>
    <string name="title_choose_tour">Выбрать прогулку</string>
</resources>