<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main"
        android:enabled="true"
        android:icon="@drawable/ic_airplan_menu"
        android:title="@string/title_menu_main"/>
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_account_menu"
        android:title="@string/title_menu_account"/>

    <item
        android:id="@+id/habitation"
        android:enabled="true"
        android:icon="@drawable/ic_house_menu"
        android:title="@string/title_menu_habitation"/>

    <item
        android:id="@+id/messenger"
        android:enabled="true"
        android:icon="@drawable/ic_messenger_menu"
        android:title="@string/title_menu_messenger"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/title_menu_profile"/>

</menu>