<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerHeight"
        style="@style/TextViewHeader"
        android:text="@string/sign_in_header"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:prefixText="+7"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:fontFamily="@font/vtb_book"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInByVtb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/vtb_auth"
        android:backgroundTint="@color/vtb_color"
        android:layout_marginTop="24dp"
        style="@style/BaseButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInByGos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/gos_auth"
        android:backgroundTint="@color/gos_color"
        android:textColor="@color/black"
        app:icon="@drawable/gosuslugi_icon"
        app:iconTintMode="multiply"
        app:iconSize="30dp"
        app:iconGravity="textStart"
        android:layout_marginTop="12dp"
        style="@style/BaseButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/sign_in"
        android:layout_marginTop="48dp"
        style="@style/BaseButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_up"
        android:textColor="#818691"/>

</androidx.appcompat.widget.LinearLayoutCompat>