<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createHabitationView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/accent_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="0dp"
        android:text="@string/title_create_tour"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/text_city"
            android:paddingStart="0dp"
            android:paddingEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveAndExit"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/title_save_and_exit" />

    </LinearLayout>
</LinearLayout>