<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="@color/black"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:tint="@color/black"
            app:tintMode="add"
            android:src="@drawable/main_fragment_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_choose_city"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:background="@color/white"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/text_your_city"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vtb_book"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/title_hout_to_get"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_from_where">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/vtb_book" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_where">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/vtb_book" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_k">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInByGos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_choose_date"
                android:backgroundTint="#E0FCFF"
                android:textColor="@color/black"
                app:icon="@drawable/baseline_calendar_today"
                app:iconTint="#7098DA"
                app:iconTintMode="multiply"
                app:iconSize="30dp"
                app:iconGravity="top"
                android:layout_marginTop="12dp"
                style="@style/BaseButton"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_main_selection_tour"
            tools:itemCount="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_q"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectTour"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            style="@style/BaseButton"
            android:layout_marginHorizontal="16dp"
            android:text="@string/title_choose_tour"
            app:layout_constraintTop_toBottomOf="@+id/recycler_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/guideBackgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/become_guide_mock_img"
            android:tint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectTour"
            app:tintMode="add" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:height="@dimen/text_title"
            android:fontFamily="@font/vtb_demi_bold"
            android:text="@string/title_become_a_guide"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectTour" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:height="@dimen/text_button"
            android:fontFamily="@font/vtb_demi_bold"
            android:text="@string/text_become_a_guide"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/guideBackgroundImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBecomeAGuide"
            style="@style/BaseButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/title_become_a_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideBackgroundImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>